[gd_scene load_steps=19 format=2]

[ext_resource path="res://Resources/puzzle8/Puzzle8.gd" type="Script" id=1]
[ext_resource path="res://Resources/Menu/Menu_Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/item_asset/pixil-frame-0-82-ConvertImage.png" type="Texture" id=3]
[ext_resource path="res://Resources/item_asset/pixil-frame-0 (82).png" type="Texture" id=4]
[ext_resource path="res://Resources/Flowchart_GUI/1start.png" type="Texture" id=5]
[ext_resource path="res://Resources/Flowchart_GUI/1start_pressed.png" type="Texture" id=6]
[ext_resource path="res://Resources/puzzle8/start.gd" type="Script" id=7]
[ext_resource path="res://Resources/Flowchart_GUI/Para1.png" type="Texture" id=8]
[ext_resource path="res://Resources/Flowchart_GUI/Para2.png" type="Texture" id=9]
[ext_resource path="res://Resources/puzzle8/input.gd" type="Script" id=10]
[ext_resource path="res://Resources/puzzle8/input2.gd" type="Script" id=11]
[ext_resource path="res://Resources/puzzle8/input3.gd" type="Script" id=12]
[ext_resource path="res://Resources/Flowchart_GUI/3decision.png" type="Texture" id=13]
[ext_resource path="res://Resources/Flowchart_GUI/3decision_pressed.png" type="Texture" id=14]
[ext_resource path="res://Resources/puzzle8/decision.gd" type="Script" id=15]
[ext_resource path="res://Resources/Flowchart_GUI/4end.png" type="Texture" id=16]
[ext_resource path="res://Resources/Flowchart_GUI/4end_pressed.png" type="Texture" id=17]
[ext_resource path="res://Resources/puzzle8/end.gd" type="Script" id=18]

[node name="Puzzle8" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_right = 562.0
margin_bottom = 400.0
window_title = "Flowchart Problem #8"

[node name="Panel" type="Panel" parent="WindowDialog"]
margin_left = -0.947388
margin_top = -2.00002
margin_right = 562.053
margin_bottom = 398.0

[node name="Menu_Button" parent="WindowDialog/Panel" instance=ExtResource( 2 )]
position = Vector2( 447.985, 284.584 )
scale = Vector2( 0.326328, 0.420874 )

[node name="connecting lines" type="TextureRect" parent="WindowDialog/Panel"]
margin_left = 225.077
margin_top = 60.2735
margin_right = 265.077
margin_bottom = 110.274
texture = ExtResource( 3 )

[node name="connecting lines2" type="TextureRect" parent="WindowDialog/Panel"]
margin_left = 223.224
margin_top = 149.226
margin_right = 263.224
margin_bottom = 199.226
texture = ExtResource( 3 )

[node name="connecting lines3" type="TextureRect" parent="WindowDialog/Panel"]
margin_left = 223.224
margin_top = 272.125
margin_right = 263.224
margin_bottom = 322.125
texture = ExtResource( 3 )

[node name="connecting lines4" type="TextureRect" parent="WindowDialog/Panel"]
margin_left = 269.651
margin_top = 232.662
margin_right = 319.651
margin_bottom = 282.662
texture = ExtResource( 4 )

[node name="connecting lines5" type="TextureRect" parent="WindowDialog/Panel"]
margin_left = 127.274
margin_top = 230.341
margin_right = 177.274
margin_bottom = 280.341
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog/Panel"]
margin_left = 415.001
margin_top = 11.4013
margin_right = 546.001
margin_bottom = 267.402

[node name="start" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 166.098
margin_top = 10.8551
margin_right = 296.098
margin_bottom = 60.8551
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = ExtResource( 7 )

[node name="Label" type="Label" parent="WindowDialog/Panel/start"]
margin_right = 40.0
margin_bottom = 14.0

[node name="input" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 166.856
margin_top = 100.518
margin_right = 296.856
margin_bottom = 150.518
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Label" type="Label" parent="WindowDialog/Panel/input"]
margin_right = 40.0
margin_bottom = 14.0

[node name="input2" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 24.1853
margin_top = 211.765
margin_right = 154.185
margin_bottom = 261.765
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
script = ExtResource( 11 )

[node name="Label" type="Label" parent="WindowDialog/Panel/input2"]
margin_left = 20.8922
margin_top = 8.51163
margin_right = 60.8922
margin_bottom = 22.5116

[node name="input3" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 297.724
margin_top = 213.038
margin_right = 427.724
margin_bottom = 263.038
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
script = ExtResource( 12 )

[node name="Label" type="Label" parent="WindowDialog/Panel/input3"]
margin_right = 40.0
margin_bottom = 14.0

[node name="decision" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 166.614
margin_top = 186.96
margin_right = 286.614
margin_bottom = 286.96
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
script = ExtResource( 15 )

[node name="Label" type="Label" parent="WindowDialog/Panel/decision"]
margin_right = 40.0
margin_bottom = 14.0

[node name="end" type="TextureButton" parent="WindowDialog/Panel"]
margin_left = 175.646
margin_top = 313.247
margin_right = 305.647
margin_bottom = 363.247
toggle_mode = true
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
script = ExtResource( 18 )

[node name="Label" type="Label" parent="WindowDialog/Panel/end"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Button" type="Button" parent="WindowDialog/Panel"]
margin_left = 456.969
margin_top = 351.307
margin_right = 536.969
margin_bottom = 376.307
text = "Submit"
[connection signal="toggled" from="WindowDialog/Panel/start" to="." method="_on_start_toggled"]
[connection signal="toggled" from="WindowDialog/Panel/input" to="." method="_on_input_toggled"]
[connection signal="toggled" from="WindowDialog/Panel/input2" to="." method="_on_input2_toggled"]
[connection signal="toggled" from="WindowDialog/Panel/input3" to="." method="_on_input3_toggled"]
[connection signal="toggled" from="WindowDialog/Panel/decision" to="." method="_on_decision_toggled"]
[connection signal="toggled" from="WindowDialog/Panel/end" to="." method="_on_end_toggled"]
[connection signal="pressed" from="WindowDialog/Panel/Button" to="." method="_on_Button_pressed"]
